Bug fixed read button and navbar alignment

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -1,4 +1,9 @@
 .posts.index {
+  .pagination {
+    background-color: deepskyblue;
+    width: 100%;
+    text-align: center !important;
+  }
   .card {
     border: none;
     border-radius: 0;
